<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SnapBilling</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="checkout">Checkout</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="offers">Offers</string>
    <string name="quick_add">Quick Add</string>
    <string name="complete">Complete</string>
    <string name="serial_no">Sl.</string>
    <string name="products">Products</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="total">Total</string>
    <string name="billfragment_tag">bill_fragment</string>
    <string name="storefragment_tag">store_fragment</string>
    <string name="monitorfragment_tag">billmonitor_fragment</string>
    <string name="delete">Delete</string>
    <string name="return_product">Return</string>
    <string name="keypad_0">0</string>
    <string name="keypad_1">1</string>
    <string name="keypad_2">2</string>
    <string name="keypad_3">3</string>
    <string name="keypad_4">4</string>
    <string name="keypad_5">5</string>
    <string name="keypad_6">6</string>
    <string name="keypad_7">7</string>
    <string name="keypad_8">8</string>
    <string name="keypad_9">9</string>
    <string name="keypad_dot">.</string>
    <string name="keypad_enter">Enter</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="discount1">-5%</string>
    <string name="discount2">-10%</string>
    <string name="discount3">-15%</string>
    <string name="amount">Amount</string>
    <string name="savings">Savings</string>
    <string name="discount">Discount</string>
    <string name="pay">Pay</string>
    <string name="paid">Paid</string>
    <string name="delivery">Delivery</string>
    <string name="cash">Cash</string>
    <string name="change">Change</string>
    <string name="default_cash">00</string>
    <string name="default_discount">00</string>
    <string name="lineitems">Line Items</string>
    <string name="saved">Saved</string>
    <string name="ty">Thank You!</string>
    <string name="cancel_bill">Cancel Bill?</string>

</resources>