<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="@integer/button7"
                android:text="@string/keypad_7" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="@integer/button8"
                android:text="@string/keypad_8" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="@integer/button9"
                android:text="@string/keypad_9" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="@integer/button4"
                android:text="@string/keypad_4" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="@integer/button5"
                android:text="@string/keypad_5" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="@integer/button6"
                android:text="@string/keypad_6" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="@integer/button1"
                android:text="@string/keypad_1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="@integer/button2"
                android:text="@string/keypad_2" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="@integer/button3"
                android:text="@string/keypad_3" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="@integer/button0"
                android:text="@string/keypad_0" />

            <Button
                android:id="@+id/buttondot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="@integer/button_dot"
                android:text="@string/keypad_dot" />

            <Button
                android:id="@+id/buttonenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="@integer/button_enter"
                android:text="@string/keypad_enter" />
        </TableRow>
    </TableLayout>

</LinearLayout>