<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/slno_textview"
        android:layout_width="@dimen/checkoutbill_productsnlo_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/serial_no" />

    <TextView
        android:id="@+id/product_textview"
        android:layout_width="@dimen/checkoutbill_productname_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/products" />

    <TextView
        android:id="@+id/qty_textview"
        android:layout_width="@dimen/checkoutbill_producqty_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/quantity" />

    <TextView
        android:id="@+id/price_textview"
        android:layout_width="@dimen/checkoutbill_productprice_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/price" />

    <TextView
        android:id="@+id/total_textview"
        android:layout_width="@dimen/checkoutbill_producttotal_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/total" />

</LinearLayout>