<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_decrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/minus" />

        <Button
            android:id="@+id/button_increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/plus" />

        <TextView
            android:id="@+id/value_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@id/button_increase"
            android:layout_toRightOf="@id/button_decrease"
            android:gravity="center"
            android:maxLength="@integer/max_characters_numberinput" >
        </TextView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/discount_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_discount1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="@integer/discount1"
            android:text="@string/discount1" />

        <Button
            android:id="@+id/button_discount2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="@integer/discount2"
            android:text="@string/discount2" />

        <Button
            android:id="@+id/button_discount3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="@integer/discount3"
            android:text="@string/discount3" />
    </LinearLayout>

    <include
        android:id="@+id/keypad_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        layout="@layout/layout_keypad" />

</LinearLayout>